# recall

./: .gitignore  README.md  docker-compose.yml  recall.code-workspace
.github/workflows/: ci.yaml
api/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/src/recall/: __init__.py
api/tests/smoke/: test_smoke.py
scripts/: bump-api.sh  bump-web.sh
web/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts
web/src/: App.tsx
web/tests/acceptance/: smoke.test.ts
