[project]
name = "recall-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Scheuermann", email = "dsmann1212@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[project.scripts]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
