[project]
name = "recall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Scheuermann", email = "dsmann1212@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[project.scripts]
recall = "recall:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
